<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.xpenses.todayModule.viewModule.TodayViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mainModule.view.MainActivity">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStartSave"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:imeOptions="actionGo"
            android:text="@string/today_btn_save"
            app:icon="@drawable/ic_save"
            app:iconGravity="top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilStartCapital"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/hint_start_capital"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toBottomOf="@id/btnStartSave"
            app:layout_constraintEnd_toStartOf="@id/btnStartSave"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnStartSave">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etStartCapital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                app:textDecimal="@{viewModel.currentWorkDay.startCapital}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFinaltSave"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/today_btn_save"
            android:enabled="@{viewModel.currentWorkDay.startCapital > 0}"
            app:icon="@drawable/ic_save"
            app:iconGravity="top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnStartSave" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFinalCapital"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/hint_final_capital"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toBottomOf="@id/btnFinaltSave"
            app:layout_constraintEnd_toStartOf="@id/btnStartSave"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnFinaltSave">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFinalCapital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:enabled="@{viewModel.currentWorkDay.startCapital > 0}"
                app:textDecimal="@{viewModel.currentWorkDay.finalCapital}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnExpensesSave"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/today_btn_save"
            android:enabled="@{viewModel.currentWorkDay.finalCapital > 0}"
            app:icon="@drawable/ic_save"
            app:iconGravity="top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnFinaltSave" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilExpensesCapital"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/hint_expenses"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toBottomOf="@id/btnExpensesSave"
            app:layout_constraintEnd_toStartOf="@id/btnStartSave"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnExpensesSave">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etExpensesCapital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:enabled="@{viewModel.currentWorkDay.finalCapital > 0}"
                app:textDecimal="@{viewModel.currentWorkDay.expenses}"/>


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today_status_new"
            android:textAppearance="?attr/textAppearanceHeadline5"
            app:statusTodayMsg="@{viewModel.currentWorkDay.status}"
            app:layout_constraintBottom_toTopOf="@id/imStatus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilExpensesCapital" />

        <ImageView
            android:id="@+id/imStatus"
            android:layout_width="@dimen/today_status_img_size"
            android:layout_height="@dimen/today_status_img_size"
            android:src="@drawable/ic_history_toggle"
            app:statusTodayImage="@{viewModel.currentWorkDay.status}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvStatus"
            app:tint="@color/gray" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today_go_to_record"
            app:icon="@drawable/ic_arrow_forward"
            app:iconGravity="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <include layout="@layout/progress_full_screen"
            app:inProgress="@{viewModel.inProgress}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
